Refactor color styles for improved readability
Updated various color styles for better contrast and readability.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     body {
       background-color: #f6fff8;
-      color: #2f4f2f;
+      color: #1b3b1b; /* 전체 본문 글자 어둡게 */
       line-height: 1.6;
     }
 
@@ -37,18 +37,18 @@
       align-items: center;
       font-size: 28px;
       font-weight: bold;
-      color: #1b5e20;
+      color: #0e2b0e; /* 더 어두운 초록 */
     }
 
     .logo svg {
       width: 36px;
       height: 36px;
       margin-right: 10px;
-      fill: #1b5e20;
+      fill: #0e2b0e;
     }
 
     nav a {
-      color: #2f4f2f;
+      color: #263322; /* 네비게이션 어둡게 */
       margin: 0 15px;
       text-decoration: none;
       font-weight: 500;
@@ -56,7 +56,7 @@
     }
 
     nav a:hover {
-      color: #4caf50;
+      color: #2e7d32;
     }
 
     section {
@@ -65,50 +65,37 @@
 
     h2 {
       font-size: 32px;
-      color: #1b5e20;
+      color: #0e2b0e; /* 제목 색상 어둡게 */
       margin-bottom: 20px;
-      border-left: 6px solid #81c784;
+      border-left: 6px solid #4caf50;
       padding-left: 10px;
     }
 
     p {
       margin-bottom: 15px;
       font-size: 18px;
+      color: #1b3b1b; /* 본문 글씨색 어두운 초록 */
     }
 
     /* ===== 메인 섹션 ===== */
     .main {
-      background: url('https://images.unsplash.com/photo-1568254183919-78a4f43b6e1c?auto=format&fit=crop&w=1400&q=60') center/cover no-repeat;
-      color: #1b5e20;
+      background: url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=1400&q=60') center/cover no-repeat;
+      color: #0f2a0f; /* 밝은 배경 대비 어두운 글자색 */
       text-align: center;
       padding: 150px 15%;
-      position: relative;
-    }
-
-    .main::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(255, 255, 255, 0.6);
-      z-index: 0;
-    }
-
-    .main h1, .main p {
-      position: relative;
-      z-index: 1;
+      text-shadow: 1px 1px 3px rgba(255,255,255,0.5); /* 약간의 가독성 보정 */
     }
 
     .main h1 {
       font-size: 60px;
       margin-bottom: 20px;
-      font-weight: 800;
-      text-shadow: 1px 1px 2px rgba(255,255,255,0.7);
+      color: #0b1f0b;
     }
 
     .main p {
       font-size: 22px;
       font-weight: 400;
+      color: #1a3a1a;
     }
 
     /* ===== 참여 섹션 ===== */
@@ -116,11 +103,12 @@
       background-color: #e8f5e9;
       border-radius: 12px;
       padding: 40px;
+      color: #1b3b1b;
     }
 
     .participate button {
       background-color: #4caf50;
-      color: white;
+      color: #ffffff;
       border: none;
       padding: 15px 30px;
       font-size: 18px;
@@ -137,6 +125,7 @@
     /* ===== 앱 다운로드 섹션 ===== */
     .download {
       text-align: center;
+      color: #1b3b1b;
     }
 
     .download a {
@@ -156,6 +145,10 @@
     }
 
     /* ===== 계획 섹션 ===== */
+    .plan {
+      color: #1b3b1b;
+    }
+
     .plan ul {
       margin-top: 15px;
       list-style-type: circle;
@@ -164,7 +157,7 @@
 
     /* ===== 후원 및 문의 ===== */
     footer {
-      background-color: #1b5e20;
+      background-color: #0e2b0e;
       color: #e8f5e9;
       text-align: center;
       padding: 40px 15%;
